--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.14.12",
     "@mui/joy": "^5.0.0-beta.9",
     "@mui/material": "^5.14.12",
+    "@mui/material-next": "^6.0.0-alpha.106",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
