--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "spendlyzer",
+  "homepage": "http://spendlyzer.online",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
